--- a/app/src/main/res/layout/earthquake_list_item.xml
+++ b/app/src/main/res/layout/earthquake_list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -7,26 +8,26 @@
 
     <TextView
         android:id="@+id/mag_text_view"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:layout_weight="1"
-        android:text="7.2" />
+        android:layout_weight="0.5"
+        tools:text="7.2" />
 
     <TextView
         android:id="@+id/place_text_view"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:layout_weight="1"
-        android:text="San Francisco" />
+        tools:text="San Francisco" />
 
     <TextView
         android:id="@+id/time_text_view"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:layout_weight="1"
-        android:text="Feb 2, 2016" />
+        tools:text="Feb 2, 2016" />
 
 </LinearLayout>
